// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button コンポーネント > Snapshots > disabled 状態のスナップショット 1`] = `
<button
  aria-disabled="true"
  aria-label="Disabled"
  class="bg-blue-600 hover:bg-blue-700 text-white shadow-md transition-colors px-3 py-1 rounded-lg font-semibold cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed"
  disabled=""
  type="button"
>
  Disabled
</button>
`;

exports[`Button コンポーネント > Snapshots > variant=Danger の HTML 構造 1`] = `
<button
  aria-label="Snap"
  class="bg-red-600 hover:bg-red-700 text-white shadow-md transition-colors px-3 py-1 rounded-lg font-semibold cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed"
  type="button"
>
  Snap
</button>
`;

exports[`Button コンポーネント > Snapshots > variant=Neutral の HTML 構造 1`] = `
<button
  aria-label="Snap"
  class="bg-gray-200 hover:bg-gray-300 text-gray-900 border border-gray-400 shadow-sm transition-colors px-3 py-1 rounded-lg font-semibold cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed"
  type="button"
>
  Snap
</button>
`;

exports[`Button コンポーネント > Snapshots > variant=Primary の HTML 構造 1`] = `
<button
  aria-label="Snap"
  class="bg-blue-600 hover:bg-blue-700 text-white shadow-md transition-colors px-3 py-1 rounded-lg font-semibold cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed"
  type="button"
>
  Snap
</button>
`;

exports[`Button コンポーネント > Snapshots > variant=Retry の HTML 構造 1`] = `
<button
  aria-label="Snap"
  class="bg-gray-300/30 hover:bg-gray-400/80 text-black border border-gray-400 shadow-sm transition-colors px-3 py-1 rounded-lg font-semibold cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed"
  type="button"
>
  Snap
</button>
`;

exports[`Button コンポーネント > Snapshots > variant=Secondary の HTML 構造 1`] = `
<button
  aria-label="Snap"
  class="bg-white hover:bg-gray-100 text-blue-600 border border-blue-400 shadow-sm transition-colors px-3 py-1 rounded-lg font-semibold cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed"
  type="button"
>
  Snap
</button>
`;

exports[`Button コンポーネント > Snapshots > カスタム className のスナップショット 1`] = `
<button
  aria-label="Custom"
  class="bg-blue-600 hover:bg-blue-700 text-white shadow-md transition-colors px-3 py-1 rounded-lg font-semibold cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed my-class"
  type="button"
>
  Custom
</button>
`;
